; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_hv_support.c_hv_set_callbacks.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_hv_support.c_hv_set_callbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_FAILURE = common dso_local global i32 0, align 4
@hv_support_lck_mtx = common dso_local global i32 0, align 4
@hv_callbacks_enabled = common dso_local global i32 0, align 4
@hv_callbacks = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hv_set_callbacks(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @hv_support_lck_mtx, align 4
  %6 = call i32 @lck_mtx_lock(i32 %5)
  %7 = load i32, i32* @hv_callbacks_enabled, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* @hv_callbacks, align 4
  store i32 1, i32* @hv_callbacks_enabled, align 4
  %11 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %9, %1
  %13 = load i32, i32* @hv_support_lck_mtx, align 4
  %14 = call i32 @lck_mtx_unlock(i32 %13)
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
